Fix Create() controllers, add spacing via CSS, update README

--- a/TreatTracker.Solution/TreatTracker/wwwroot/css/styles.css
+++ b/TreatTracker.Solution/TreatTracker/wwwroot/css/styles.css
@@ -1,3 +1,24 @@
+label {
+  display: block;
+  margin: 10px;
+  white-space: pre-line;
+}
+
+input {
+  margin-left: auto;
+  margin-right: auto;
+  width: 15em;
+}
+
+input[type=submit] {
+  display: block;
+  margin-top: 1em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2em;
+  white-space: pre-line;
+}
+
 .content {
   background-color: rgba(220, 220, 220, 0.767);
   max-width: 50%;
